Open links using java.awt.Desktop