@@ -1,17 +1,18 @@
 package fi.helsinki.cs.tmc.actions;
 
 import fi.helsinki.cs.tmc.ui.ConvenientDialogDisplayer;
+import fi.helsinki.cs.tmc.utilities.BrowserOpener;
 
 import java.awt.event.ActionEvent;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import javax.swing.AbstractAction;
 
 import org.openide.awt.ActionID;
 import org.openide.awt.ActionReference;
 import org.openide.awt.ActionReferences;
 import org.openide.awt.ActionRegistration;
-import org.openide.awt.HtmlBrowser;
 import org.openide.util.NbBundle;
 
 @ActionID(category = "TMC",
@@ -26,10 +27,10 @@ public class OpenProfileAction extends AbstractAction {
     @Override
     public void actionPerformed(ActionEvent e) {
         try {
-            HtmlBrowser.URLDisplayer.getDefault().showURLExternal(new URL("https://tmc.mooc.fi/participants/me"));
-        } catch (MalformedURLException ex) {
+            BrowserOpener.openUrl(URI.create("https://tmc.mooc.fi/participants/me"));
+        } catch (URISyntaxException | IOException ex) {
             ConvenientDialogDisplayer.getDefault().displayError("Failed to open browser.\n" + ex.getMessage());
         }
     }
-    
+
 }
